[gd_scene load_steps=4 format=3 uid="uid://cx1nd5x2s6vyt"]

[ext_resource type="Script" path="res://scripts/enemies/enemy.gd" id="1_864uv"]
[ext_resource type="PackedScene" uid="uid://cpp0tc7uqrv4" path="res://scenes/shared/hurtbox.tscn" id="3_s745q"]
[ext_resource type="PackedScene" uid="uid://mjwkfxpnwct6" path="res://scenes/shared/continuous_hitbox.tscn" id="4_jxd8c"]

[node name="SimpleEnemy" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_864uv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -24)
hframes = 3

[node name="Hurtbox" parent="." instance=ExtResource("3_s745q")]
visible = false
collision_layer = 4
owned_by = 2

[node name="ContinuousHitbox" parent="." instance=ExtResource("4_jxd8c")]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Compass" type="Marker2D" parent="."]

[node name="Navigation" type="NavigationAgent2D" parent="."]
path_max_distance = 10000.0

[connection signal="take_damage" from="Hurtbox" to="." method="_on_hurtbox_take_damage"]

[editable path="Hurtbox"]
[editable path="ContinuousHitbox"]
